--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
     <h3 class="text-white text-center">About</h3>
   </div>
   <div class="card-body">
-    <p class="text-white">This is a web application for make comparations between times. Made for Daniel Yanes.</p>
+    <p class="text-white">This is a web application for make comparations between f1 times. Made for Daniel Yanes.</p>
   </div>
 </article>
 {% endblock %}
