--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,11 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="times f1 comparator time">
-  <title>Times Comparator | Dan</title>
+  <title>Times Comparator</title>
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename = 'img/icons/favicon.ico') }}" type="image/x-icon">
+  <!-- FONT AWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+  />
   <!-- BOOTSTRAP STYLES -->
   <link rel="stylesheet" href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}">
   <!-- CUSTOM STYLES -->
   <link rel="stylesheet" href="{{ url_for('static', filename = 'css/custom.css') }}">
+
 </head>
 
 <body>
