--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -5,7 +5,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container">
 
-    <a class="navbar-brand" href="{{ url_for('times.index') }}">Times Comparation</a>
+    <a class="navbar-brand" href="{{ url_for('times.index') }}">
+      F1 Times Comparator
+      <i class="fa-light fa-clock"></i>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
