time.txt value reset to 0

--- a/templates/result-comparation.html
+++ b/templates/result-comparation.html
@@ -1,5 +1,12 @@
 <!-- PAGE FOR SHOW THE RESULT OF THE COMPARATION -->
 {% extends 'layout.html' %} {% block content %}
+
+<style>
+  #main-container {
+    margin: 3rem auto 17rem;
+  }
+</style>
+
 <article class="card" id="result-comparation-card">
   <div class="card-header">
     <h2 class="text-white" style="font-weight: lighter;">
