--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,6 +34,8 @@
 
   <!-- BOOTSTRAP SCRIPTS -->
   <script src="{{ url_for('static', filename = 'js/bootstrap.bundle.min.js') }}"></script>
+  <!-- MAIN SCRIPTS -->
+  <script src="{{ url_for('static', filename = 'js/main.js') }}" type="module"></script>
 
 </body>
 
