--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -25,6 +25,9 @@
             About
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('times.settings') }}">Settings</a>
+        </li>
       </ul>
     </div>
   </div>
