icons added to the pages

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -2,6 +2,9 @@
 <footer class="p-2" id="main-footer">
   <p class="text-white text-center">2022</p>
   <div class="mx-auto w-100 text-center">
-    <a class="btn btn-secondary" href="https://github.com/EduardYan/">My Github</a>
+    <a class="btn btn-secondary" href="https://github.com/EduardYan/" target="_blank" rel="noreferrer">
+      My Github
+      <i class="fa-brands fa-github"></i>
+    </a>
   </div>
 </footer>
