--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,12 +8,19 @@
   <meta name="keywords" content="times f1 comparator time">
   <title>Times Comparator</title>
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="{{ url_for('static', filename = 'img/icons/favicon.ico') }}" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ url_for('static', filename = 'img/favicon.ico') }}" type="image/x-icon">
+
+  <!-- GOOGLE FONT -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
+
   <!-- FONT AWESOME -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+  <link rel="stylesheet" href="{{ url_for('static', filename = 'css/icons/all.min.css') }}" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
   />
   <!-- BOOTSTRAP STYLES -->
   <link rel="stylesheet" href="{{ url_for('static', filename = 'css/bootstrap.min.css') }}">
+
   <!-- CUSTOM STYLES -->
   <link rel="stylesheet" href="{{ url_for('static', filename = 'css/custom.css') }}">
 
@@ -25,8 +32,7 @@
 
   <!-- CONTAINER -->
   <div class="container" id="main-container">
-    {% block content %}
-    {% endblock %}
+    {% block content %} {% endblock %}
   </div>
 
   {% include 'partials/_footer.html' %}
